Changed case of name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nestable",
+  "name": "nestable",
   "description": "Drag & drop hierarchical list with mouse and touch compatibility",
   "version": "0.0.1"
 }
